# ESP-Miner-LVXX

./: config-lv06.cvs  sdkconfig.defaults
components/asic/: CMakeLists.txt  Kconfig  asic.c  asic_detect.c  asic_utils.c  asic_utils.h  bm1366.cpp  bm1368.c  bm1370.c  bm1397.c  common.c  crc.cpp  crc5.hpp  pll.c  serial.c
components/connect/: connect.c
components/dns_server/: CMakeLists.txt  dns_server.c  dns_server.cpp  dns_server.hpp  dns_server_intf.h  dns_server_task.c  dns_server_task.h
components/objpool/: CMakeLists.txt  mempool.cpp
components/simd_utils/: CMakeLists.txt  mem_cpy.cpp  mem_search.cpp
components/stratum/: CMakeLists.txt  bm_job_pool.cpp  coinbase.cpp  hashpool.cpp  hashpool.h  hexutils.hpp  jobfactory.cpp  jobfactory.hpp  jsmn.hpp  json_rpc.cpp  json_rpc.hpp  mining.c  stratum_api.c  stratum_rpc.cpp  stratum_rpc.hpp  strbuf.c  strbuf.h  strview.h  utils.c
components/stratum/include/: bm_job_pool.h  coinbase.h  coinbase.hpp  jobfactory.h  json_rpc.h  mining.h  mining_types.h  obj_pool_stats.h  stratum_api.h  stratum_rpc.h  utils.h
main/: CMakeLists.txt  cjson_helper.c  cjson_helper.h  device_config.c  device_config.h  display.c  display.h  global_state.h  i2c_bitaxe.c  main.c  nvs_config.cpp  nvs_config.h  ptrqueue.h  screen.c  screen.h  system.c  system.h  work_queue.c  work_queue.h
main/bap/: bap_handlers.c  bap_subscription.c  bap_uart.c
main/http_server/: http_json_writer.cpp  http_json_writer.h  http_json_writer.hpp  http_server.c  http_server.h  http_writer.cpp  http_writer.h  http_writer.hpp  websocket.c  websocket.h  (+4 more)
(+59 files in other folders)
